--- a/.devcontainers/docker-compose.yml
+++ b/.devcontainers/docker-compose.yml
@@ -27,8 +27,8 @@ services:
       POSTGRES_USER: example
       POSTGRES_PASSWORD: pass
       POSTGRES_HOST_AUTH_METHOD: trust
-    ports:
-      - 5432:5432
+    # ports:
+    #  - 5432:5432
 
 volumes:
   postgres-data: null
