--- a/.devcontainers/devcontainer.json
+++ b/.devcontainers/devcontainer.json
@@ -2,6 +2,7 @@
     "name": "Python 3 & PostgreSQL",
     "dockerComposeFile": "docker-compose.yml",
     "service": "app",
+    "runServices": ["db"],
     "workspaceFolder": "/workspace",
    
     // Configure tool-specific properties.
