--- a/.devcontainers/Dockerfile
+++ b/.devcontainers/Dockerfile
@@ -6,3 +6,5 @@ ENV PYTHONUNBUFFERED 1
 COPY requirements.txt /tmp/pip-tmp/
 RUN pip3 --disable-pip-version-check --no-cache-dir install -r /tmp/pip-tmp/requirements.txt \
    && rm -rf /tmp/pip-tmp
+   
+RUN this has to fail
